# wgctest

./: Cargo.toml  README.md
bindings/: build.rs
src/: d3d.rs  interop.rs  main.rs  snapshot.rs  test_window.rs
src/tests/: alpha.rs  basic_window.rs  error.rs  fullscreen_transition.rs  mod.rs  utils.rs
src/util/: async_graphics_capture.rs  color.rs  d3d.rs  error.rs  graphics_capture.rs  image.rs  interop.rs  mapped.rs  mod.rs  snapshot.rs  test_runner.rs  test_window.rs
