[package]
name = "wgctest"
version = "0.1.0"
authors = ["robmikh <rob.mikh@outlook.com>"]
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = [ "attributes"] }

[dependencies.windows]
version = "0.43.0"
features = [
    "Foundation_Collections",
    "Foundation_Numerics",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging",
    "Storage",
    "Storage_Streams",
    "System",
    "UI",
    "UI_Composition_Core",
    "UI_Composition_Desktop",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
]
